--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,12 @@
                 the code -->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
+                <version>3.8.0</version>
             </plugin>
         </plugins>
     </build>
